--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0"
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.2"
   }
 }
